# covid-19

./: .gitignore  README.md  pyproject.toml  testenv.py
data/: covid19-combined.csv
notebooks/: covid-19.ipynb
src/: dataset.py  pipeline.py  utils.py
test/: test_dataset.py
test/resources/: test.csv
